# prompt-shield

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf
api-gateway/: .env.example  README.md  TESTING_GUIDE.md  init-db.sql  planning.md  requirements-test.txt  requirements.txt
api-gateway/app/: __init__.py  main.py
api-gateway/app/api/: dependencies.py
api-gateway/app/api/v1/: admin.py  auth.py  dashboard.py  detection.py  tenant_management.py  webhooks.py  websocket_admin.py
api-gateway/app/core/: base_model.py  config.py  database.py  jwt_auth.py  openapi.py  rbac.py  security.py  tenant_auth.py
api-gateway/app/middleware/: rate_limiter.py
api-gateway/app/models/: __init__.py  auth.py  detection.py  tenant.py
api-gateway/app/services/: cache_service.py  detection_client.py  detection_service.py  tenant_analytics_service.py  tenant_cache_service.py
api-gateway/app/utils/: validators.py
api-gateway/app/websocket/: __init__.py  auth.py  circuit_breaker.py  dual_auth.py  events.py  manager.py  metrics.py  metrics_broadcaster.py  socketio_server.py
api-gateway/docker/: .dockerignore  Dockerfile
api-gateway/docs/: API_DOCUMENTATION.md  index.html  swagger.yaml
api-gateway/tests/: __init__.py
detection-engine/: Dockerfile  README.md  docker-compose.yml  go.mod
detection-engine/cmd/server/: main.go
detection-engine/docker/: .dockerignore  Dockerfile
detection-engine/internal/config/: config.go
detection-engine/internal/detector/: circuit_breaker.go  llm.go  model_registry.go  models.go  pipeline.go  pipeline_with_fallback.go
detection-engine/internal/handler/: detection.go  fallback_handler.go
detection-engine/tests/: test_edge_cases.py  test_non_edge_cases.py
docs/: api-authentication.md  backend-architecture.md  performance-infrastructure.md
monitoring/grafana/dashboards/: business-intelligence.json  platform-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
sdk/python/: Makefile  README.md  pyproject.toml
sdk/python/.github/workflows/: ci.yml
sdk/python/examples/: async_example.py  basic_usage.py  chat_application.py  framework_integration.py
sdk/python/src/prompt_shield/: __init__.py  cache.py  client.py  exceptions.py  models.py  retry.py
ssl/: .gitignore  README.md
